# fastapi_task_manager

./: .gitignore  .test.env  Dockerfile  Makefile  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_03_13_1844-04d683b20a66_create_users_table.py  2024_03_14_2037-30eabdd58c74_create_users_table.py  2024_03_14_2107-6e6df2c682c0_create_tasks_table.py  2024_03_14_2245-dc800936eb63_create_relations_between_user_and_tasks.py  2024_03_17_0103-badcebf53ecd_add_assignee_to_task_model.py  2024_03_17_0108-eea355f200e8_rename_task_user_to_task_author.py
api_v1/: __init__.py
api_v1/auth/: jwt.py  utils.py  views.py
api_v1/users/: crud.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  user.py
docker_compose/: app.yaml  storages.yaml  workers.yaml
project/: config.py  containers.py
src/: config.py
src/api/: __init__.py  dependencies.py  filters.py  schemas.py
src/api/v1/: __init__.py
src/api/v1/auth/: dependencies.py  handlers.py  routers.py  schemas.py  utils.py
src/apps/auth/: services.py  utils.py
src/apps/common/: exceptions.py  repositories.py  unitofwork.py
src/apps/tasks/: entities.py  exceptions.py  models.py  repositories.py  services.py  usecases.py
src/apps/users/: entities.py  exceptions.py  models.py  repositories.py  services.py  utils.py
src/core/: config.py
src/core/db/: __init__.py  base.py  db_helper.py
src/core/models/: __init__.py
src/db/: db_helper.py
src/project/: config.py  containers.py
tests/services/: conftest.py  test_tasks.py
tests/tasks/: conftest.py  test_tasks.py
(+23 files in other folders)
