[tool.poetry]
name = "task manager"
version = "0.1.0"
description = ""
authors = ["PvtJoker91 <sanyakoenig@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.0"}
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
sqlalchemy = "^2.0.28"
bcrypt = "^4.1.2"
alembic = "^1.13.1"
databases = {extras = ["postgresql"], version = "^0.9.0"}
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
